--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,50 @@
-{% load socialaccount %}
+<html>
+    <body>
+        <h1>Welcome {{ user.username }} !!!</h1>
 
-{% if user.is_authenticated %}
-    <p>Welcome {{ user.username }} !!!</p>
-    <ul>
-    {% for activity in activities %}
-        <li>{{activity.name}} - {{activity.start_date_local}} - {{activity.distance}}</li>
-    {% endfor %}
-    </ul>
-    <a href="{% url "account_logout" %}">Logout</a>
-{% else %}
-    <a href="{% provider_login_url 'strava' %}">Login With Strava</a>
-{% endif %}
+        <div id="container"></div>
+        <a href="{% url "account_logout" %}">Logout</a>
+
+        <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+        <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+        <script type="text/babel">
+            class DistanceForm extends React.Component {
+                constructor(props) {
+                    super(props);
+                    this.state = { distance: 1, activities: [] };
+                    this.handleChange = this.handleChange.bind(this);
+                    this.loadActivities();
+                }
+
+                loadActivities() {
+                    fetch('/activities/' + this.state.distance)
+                            .then(response => response.json())
+                            .then(data => this.setState({ activities: data })
+                    );
+                }
+
+                handleChange(event) {
+                    this.setState({distance: event.target.value});
+                    this.loadActivities();
+                }
+
+                render() {
+                    return (
+                        <div>
+                            <label>Distance:</label>
+                            <input type="number" id="distance" name="distance" min="0" max="10" value={this.state.distance} onChange={this.handleChange} />
+                            <ul>
+                            {this.state.activities.map((activity, key) =>
+                                <li key={activity.id}>{activity.name} - {activity.start_date_local} - {activity.distance}</li>
+                            )}
+                            </ul>
+                        </div>
+                    );
+                }
+            }
+            const domContainer = document.querySelector('#container');
+            ReactDOM.render(<DistanceForm/>, domContainer);    
+        </script>
+    </body>
+</html>
