--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,17 @@
+{% extends 'base.html' %}
 {% load socialaccount %}
+{% load static %}
 
-<a href="{% provider_login_url 'strava' %}">Login With Strava</a>
+{% block content %}
+<section class="hero">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title">strava-distance-search</h1>
+            <h2 class="subtitle">Search for your past strava activities of a specified distance.</h2>
+            <a href="{% provider_login_url 'strava' %}"><img src="{% static "images/btn_strava_connectwith_orange.png" %}" alt="Login With Strava"></a>
+            
+          </div>
+        </div>
+      </section>
+
+{% endblock %}
