--- a/templates/base.html
+++ b/templates/base.html
@@ -4,24 +4,39 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
         {% block head %}
         {% endblock %}
+        <style>
+            body {
+                display: flex;
+                min-height: 100vh;
+                flex-direction: column;
+            }
+            .container {
+                flex: 1;
+            }
+            .footer {
+                height: 1px;
+            }
+         </style>
     </head>
     <body>
+        {% if user.is_authenticated %}
         <div class="navbar">
-            <div class="navbar-menu">         
+            <div class="navbar-menu">  
+                <div class="navbar-brand">
+                    <p class="navbar-item">strava-distance-search</p>
+                </div>                               
                 <div class="navbar-end">
-                    {% if user.is_authenticated %}
                     <a class="navbar-item" href="{% url "account_logout" %}">Logout</a>
-                    {% endif %}
                 </div>
             </div>
         </div>
+        {% endif %}
         <div class="container">
         {% block content %}
         {% endblock %}
         </div>
         <footer class="footer">
             <div class="content has-text-centered">
-                <img src="{% static "images/api_logo_pwrdBy_strava_horiz_light.png" %}" alt="Powered By Strava">
+                <img src="{% static "images/api_logo_pwrdBy_strava_horiz_light.png" %}" style="height:32px; width: 169px" alt="Powered By Strava">
             </div>
     </body>
-</html>
