--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,12 @@
 {%load static %}
+<!DOCTYPE html>
 <html>
     <head>
+        <title>strava-distance-search</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+        <link href="{% static "styles/style.css" %}" type="text/css" rel="stylesheet"/>
         {% block head %}
         {% endblock %}
-        <style>
-            body {
-                display: flex;
-                min-height: 100vh;
-                flex-direction: column;
-            }
-            .container {
-                flex: 1;
-            }
-            .footer {
-                height: 1px;
-            }
-         </style>
     </head>
     <body>
         {% if user.is_authenticated %}
@@ -37,6 +27,8 @@
         </div>
         <footer class="footer">
             <div class="content has-text-centered">
-                <img src="{% static "images/api_logo_pwrdBy_strava_horiz_light.png" %}" style="height:32px; width: 169px" alt="Powered By Strava">
+                <img id="stravaFooter" src="{% static "images/api_logo_pwrdBy_strava_horiz_light.png" %}" alt="Powered By Strava">
             </div>
+        </footer>
     </body>
+</html>
