Initial attempt at a slider input

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -24,6 +24,10 @@ body {
     width: 169px;
 }
 
+#sliderField, #slider {
+    width: 100%;
+}
+
 .lds-ring {
     display: inline-block;
     position: relative;
